exports[`popup/Header render active 1`] = `
<div
  className="component">
  <a
    className="composeBtn"
    onClick={[Function]}>
    <svg
      className="composeIcon"
      viewBox="0 0 18 18">
      <path
        d="M5.4 13.6l3.7-1.4 8.4-8.4c.6-.6.6-1.7 0-2.3s-1.7-.6-2.3 0l-8.4 8.4-1.4 3.7zm10.6 2.4h-14v-14h6.5l2-2h-10.5v18h18v-9.6l-2 2v5.6z" />
    </svg>
    text
  </a>
  <div
    className="centerBlock">
    <a
      onClick={[Function]}>
      username@ya.ru
       (
      <strong>
        5
      </strong>
      )
    </a>
    <button
      className="reloadBtn"
      disabled={false}
      onClick={[Function]}>
      <svg
        className="reloadIcon"
        viewBox="0 0 18 18">
        <path
          d="M2 9c0-2.4 1.2-4.5 3-5.7v1.7c0 .5.4 1 1 1s1-.5 1-1v-4c0-.3-.1-.5-.3-.7-.2-.2-.4-.3-.7-.3h-4c-.6 0-1 .4-1 1s.5 1 1 1h1.4c-2.1 1.7-3.4 4.2-3.4 7 0 5 4 9 9 9v-2c-3.9 0-7-3.1-7-7zm14 7h-1.4c2-1.7 3.4-4.2 3.4-7 0-5-4-9-9-9v2c3.9 0 7 3.1 7 7 0 2.4-1.2 4.5-3 5.7v-1.7c0-.5-.4-1-1-1s-1 .5-1 1v4c0 .3.1.5.3.7.2.2.4.3.7.3h4c.5 0 1-.4 1-1s-.5-1-1-1z" />
      </svg>
    </button>
  </div>
  <a
    className="item"
    onClick={[Function]}>
    <svg
      className="settingsIcon"
      viewBox="1.5 2 20 19">
      <path
        d="M11.4,15.4c2.2,0,4-1.8,4-4s-1.8-4-4-4s-4,1.8-4,4S9.2,15.4,11.4,15.4z M14.9,2l3,1.7l-0.7,2.8l0.3,0.4c0.2,0.3,0.4,0.5,0.6,0.6c0.2,0.3,0.4,0.5,0.5,0.7l0.2,0.5l2.7,0.7v3.8l-2.7,0.6l-0.3,0.6c-0.3,0.6-0.6,1.2-1,1.8l-0.3,0.4l0.8,2.7L14.9,21l-1.5-1.7L13,19h-0.5c-0.7,0.1-1.3,0.1-2,0H9.9l-0.4,0.4L8.1,21l-2.9-1.8l0.7-2.7l-0.3-0.4c-0.2-0.3-0.5-0.5-0.7-0.8c-0.2-0.2-0.4-0.3-0.5-0.5l-0.2-0.5l-2.7-0.7l0.1-4l2.2-0.5L4.4,9l0.2-0.5C4.8,8,5.1,7.4,5.5,6.9l0.3-0.4L4.9,3.8L8.2,2l1.5,1.7l0.4,0.4L10.6,4c0.6-0.1,1.2-0.1,1.9,0L13,4.1L14.9,2z" />
    </svg>
  </a>
</div>
`;

exports[`popup/Header render disabled 1`] = `
<div
  className="component">
  <a
    className="composeBtn"
    onClick={[Function]}>
    <svg
      className="composeIcon"
      viewBox="0 0 18 18">
      <path
        d="M5.4 13.6l3.7-1.4 8.4-8.4c.6-.6.6-1.7 0-2.3s-1.7-.6-2.3 0l-8.4 8.4-1.4 3.7zm10.6 2.4h-14v-14h6.5l2-2h-10.5v18h18v-9.6l-2 2v5.6z" />
    </svg>
    text
  </a>
  <div
    className="centerBlock">
    <a
      onClick={[Function]}>
      username@ya.ru
       (
      <strong>
        5
      </strong>
      )
    </a>
    <button
      className="reloadBtn"
      disabled={true}
      onClick={[Function]}>
      <svg
        className="reloadIcon"
        viewBox="0 0 18 18">
        <path
          d="M2 9c0-2.4 1.2-4.5 3-5.7v1.7c0 .5.4 1 1 1s1-.5 1-1v-4c0-.3-.1-.5-.3-.7-.2-.2-.4-.3-.7-.3h-4c-.6 0-1 .4-1 1s.5 1 1 1h1.4c-2.1 1.7-3.4 4.2-3.4 7 0 5 4 9 9 9v-2c-3.9 0-7-3.1-7-7zm14 7h-1.4c2-1.7 3.4-4.2 3.4-7 0-5-4-9-9-9v2c3.9 0 7 3.1 7 7 0 2.4-1.2 4.5-3 5.7v-1.7c0-.5-.4-1-1-1s-1 .5-1 1v4c0 .3.1.5.3.7.2.2.4.3.7.3h4c.5 0 1-.4 1-1s-.5-1-1-1z" />
      </svg>
    </button>
  </div>
  <a
    className="item"
    onClick={[Function]}>
    <svg
      className="settingsIcon"
      viewBox="1.5 2 20 19">
      <path
        d="M11.4,15.4c2.2,0,4-1.8,4-4s-1.8-4-4-4s-4,1.8-4,4S9.2,15.4,11.4,15.4z M14.9,2l3,1.7l-0.7,2.8l0.3,0.4c0.2,0.3,0.4,0.5,0.6,0.6c0.2,0.3,0.4,0.5,0.5,0.7l0.2,0.5l2.7,0.7v3.8l-2.7,0.6l-0.3,0.6c-0.3,0.6-0.6,1.2-1,1.8l-0.3,0.4l0.8,2.7L14.9,21l-1.5-1.7L13,19h-0.5c-0.7,0.1-1.3,0.1-2,0H9.9l-0.4,0.4L8.1,21l-2.9-1.8l0.7-2.7l-0.3-0.4c-0.2-0.3-0.5-0.5-0.7-0.8c-0.2-0.2-0.4-0.3-0.5-0.5l-0.2-0.5l-2.7-0.7l0.1-4l2.2-0.5L4.4,9l0.2-0.5C4.8,8,5.1,7.4,5.5,6.9l0.3-0.4L4.9,3.8L8.2,2l1.5,1.7l0.4,0.4L10.6,4c0.6-0.1,1.2-0.1,1.9,0L13,4.1L14.9,2z" />
    </svg>
  </a>
</div>
`;
